<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <DUT Name="stGRID_POS" Id="{c0750ff1-87a1-43cc-ae44-2081110f86f5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE stGRID_POS :
(
	poi := 0,
	pu := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>